add empty views for open menus and menus

--- a/app/scripts/apps/private/apps/menus/index/views/templates/menus_heading.hbs
+++ b/app/scripts/apps/private/apps/menus/index/views/templates/menus_heading.hbs
@@ -1,2 +1,2 @@
-<h2 class="panel-title pull-left">Open Menus</h2>
+<h2 class="panel-title pull-left">Menus</h2>
 <a class="btn btn-primary btn-sm pull-right js-new" href="#" role="button">Create</a>
