--- a/app/scripts/apps/private/apps/restaurant/views/show/templates/header.hbs
+++ b/app/scripts/apps/private/apps/restaurant/views/show/templates/header.hbs
@@ -1,2 +1,2 @@
-<h2 class="panel-title pull-left">Restaurant</h2>
+<h2 class="panel-title pull-left">{{title}}</h2>
 <a class="btn btn-default btn-sm pull-right js-edit" href="#">Edit</a>
