--- a/app/scripts/apps/private/apps/menus/views/destroy/templates/footer.hbs
+++ b/app/scripts/apps/private/apps/menus/views/destroy/templates/footer.hbs
@@ -1,2 +1,2 @@
-<button class="btn btn-primary js-yes">Yes</button>
-<button class="btn btn-secondary js-no">No</button>
+<button class="btn btn-primary js-confirm">Yes</button>
+<button class="btn btn-secondary js-cancel">No</button>
